<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
<package format="1" xmlns="https://wiki.freecad.org/Package_Metadata">
  <name>freecad.gears workbench2</name>
  <description>A gear workbench for FreeCAD</description>
  <version>1.4</version>
  <date>2024-09-11</date>
  <maintainer email="sppedflyer@gmail.com">looooo</maintainer>
  <license file="LICENSE">GPL-3.0-or-later</license>
  <url type="repository" branch="master">https://github.com/kaktus42/freecad.gears</url>
  <url type="bugtracker">https://github.com/kaktus42/freecad.gears/issues</url>
  <url type="documentation">https://wiki.freecad.org/FCGear_Workbench</url>
  <icon>freecad/gears/icons/gearworkbench.svg</icon>

  <content>
    <workbench>
      <classname>GearWorkbench2</classname>
      <subdirectory>./</subdirectory>
      <freecadmin>0.19</freecadmin>
      <tag>gear</tag>
      <tag>gears</tag>
    </workbench>
    <depend>scipy</depend>
  </content>

</package>
